# cryoet-deepfinder

./: ._README.md  ._core_utils.py  ._deepfind.py  ._losses.py  ._models.py  ._utils.py  README.md  containers.py  core_utils.py  deepfind.py  requirements.txt  requirements_gpu.txt  setup.cfg  utils.py  utils_lmap.py  utils_objl.py  utils_smap.py
cryoet-deepfinder/utils/: objl.py  params.py
data/: particle_locations_model_9.txt  tomo10_data.h5  tomo10_objlist.xml  tomo10_target.h5  tomo1_data.h5  tomo1_objlist.xml  tomo1_target.h5  tomo2_data.h5  tomo2_objlist.xml  tomo2_target.h5  tomo3_data.h5  tomo3_objlist.xml  tomo3_target.h5  tomo4_data.h5  tomo4_objlist.xml  tomo4_target.h5  tomo5_data.h5  tomo5_objlist.xml  tomo5_target.h5  tomo6_data.h5  tomo6_objlist.xml  tomo6_target.h5  tomo7_data.h5  tomo7_objlist.xml  tomo7_target.h5  tomo8_data.h5  tomo8_objlist.xml  tomo8_target.h5  tomo9_data.h5  tomo9_objlist.xml  tomo9_target.h5
deepfinder/: inference.py  losses.py  models.py  training.py
deepfinder/utils/: common.py  core.py  dataloader.py  eval.py  objl.py  params.py  smap.py
docs/source/: api.rst  cmd_line_tools.rst  conf.py  guide.rst  index.rst  intro.rst  tutorial.rst
examples/analyze/: ._evaluate_localization.py  ._launch_clustering.py  ._launch_segment.py  ._visualize_segmentation.py  evaluate.py  evaluate_localization.py  launch_clustering.py  launch_segment.py  step1_launch_segment.py  step2_launch_clustering.py  step3_launch_evaluation.py  visualize_segmentation.py
examples/analyze/result/: evaluation_log.txt  particle_locations_tomo9.txt  tomo10_labelmap.h5  tomo10_objlist.xml  tomo1_labelmap.h5  tomo1_objlist.xml  tomo2_labelmap.h5  tomo2_objlist.xml  tomo3_labelmap.h5  tomo3_objlist.xml  tomo4_labelmap.h5  tomo4_objlist.xml  tomo5_labelmap.h5  tomo5_objlist.xml  tomo6_labelmap.h5  tomo6_objlist.xml  tomo7_labelmap.h5  tomo7_objlist.xml  tomo8_labelmap.h5  tomo8_objlist.xml  tomo9_objlist.xml  tomo9_objlist_raw.xml  tomo9_objlist_thresholded.xml
examples/training/: ._launch_training.py  launch_training.py  object_list_train.xml  object_list_valid.xml  step1_generate_target.py  step2_launch_training.py
examples/training/in/: object_list_tomo0.xml  object_list_train.xml  object_list_valid.xml
examples/training/in/masks/: 1bxn.mrc  1qvr.mrc  1s3x.mrc  1u6g.mrc  2cg9.mrc  3cf3.mrc  3d2f.mrc  3gl1.mrc  3h84.mrc  3qm1.mrc  4b4t.mrc  4d8q.mrc
pyqt/: custom_theme.py
pyqt/annotation/: gui_annotation.py  gui_annotation.ui
pyqt/clustering/: gui_clustering.py  gui_clustering.ui
pyqt/display/: gui_display.py  gui_display.ui  gui_display_interface.py  widget_display.py
pyqt/generate_target/: gui_target.py  gui_target.ui
pyqt/segment/: gui_segment.py  gui_segment.ui
pyqt/train/: gui_train.py  gui_train.ui  plot_window.py
test/: test_clustering.py  test_eval.py  test_segment.py  test_target_builder.py  test_train.py  test_utils.py
test/utils/: test_eval.py
