[metadata]
name = cryoet-deepfinder
version = 0.1.0
author = E. Moebel
author_email = emmanuel.moebel@gmail.com

license = GPL-3.0
description = DeepFinder is an original deep learning approach to localize macromolecules in cryo electron tomography images. The method is based on image segmentation using a 3D convolutional neural network.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    tensorflow==2.6.0
    Keras==2.6.0
    numpy>=1.19.5
    h5py>=3.1.0
    lxml>=4.3.4
    mrcfile>=1.1.2
    scikit-learn>=0.22.2.post1
    scikit-image>=0.15.0
    matplotlib>=3.1.0
    PyQt5>=5.13.2
    pyqtgraph>=0.10.0
    openpyxl>=3.0.3
    scipy>=1.5.4
    pycm

[options.package_data]
* = *.ui
deepfinder = examples/*/*/*.mrc, examples/*/*/**.h5, examples/*/*/**.txt, examples/*/*/**.png, examples/*/*/**.xml

[options.entry_points]
console_scripts =
    annotate = deepfinder.bin.annotate:main
    generate_target = deepfinder.bin.generate_target:main
    train = deepfinder.bin.train:main
    segment = deepfinder.bin.segment:main
    cluster = deepfinder.bin.cluster:main
    display = deepfinder.bin.display:main