[metadata]
name = cryoet-deepfinder
version = 0.2.0
author = E. Moebel
author_email = emmanuel.moebel@gmail.com

license = GPL-3.0
description = DeepFinder is an original deep learning approach to localize macromolecules in cryo electron tomography images. The method is based on image segmentation using a 3D convolutional neural network.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    tensorflow==2.13.0rc0
	lxml>=4.9.3
	mrcfile>=1.4.3
	scikit-learn==1.3.2 
	scikit-image==0.22.0 
	matplotlib>=3.8.1
    PyQt5==5.15.10
    pyqtgraph==0.13.3
	openpyxl>=3.1.2
    pycm>=4.0

[options.package_data]
* = *.ui
deepfinder = examples/*/*/*.mrc, examples/*/*/**.h5, examples/*/*/**.txt, examples/*/*/**.png, examples/*/*/**.xml

[options.entry_points]
console_scripts =
    annotate = deepfinder.bin.annotate:main
    generate_target = deepfinder.bin.generate_target:main
    train = deepfinder.bin.train:main
    segment = deepfinder.bin.segment:main
    cluster = deepfinder.bin.cluster:main
    display = deepfinder.bin.display:main